k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-cointrading-ui
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meme-cointrading-ui
  template:
    metadata:
      labels:
        app: meme-cointrading-ui
    spec:
      containers:
        - name: meme-cointrading-ui
          image: kishore2006/meme-cointrading-ui:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: meme-cointrading-ui
  namespace: staging
spec:
  selector:
    app: meme-cointrading-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
