k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-cointrading-ui-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.interstate.so
    secretName: meme-cointrading-ui-tls
  rules:
  - host: app.interstate.so
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meme-cointrading-ui
            port:
              number: 3000
